<resources>
    <string name="app_name">RecyclerLiveData</string>
    <string name="delete_list_item">Item deleted</string>
    <string name="undo_deleting">undo deleting?</string>

    <string name="transition_drawable">drawable</string>
    <string name="transition_message">message</string>
    <string name="transition_date_and_time">date</string>
    <string name="error_no_extra_found">Problem with retrieving detail fragment</string>
    <string name="type_some_text">type some text</string>
    <string name="edit">edit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_photo">Add new photo</string>
    <string name="gallery">Gallery</string>
    <string name="gallery_application">Gallery Application</string>
</resources>
